# PythonBase

./: README.md
Lession3/: 3.py
Lesson15/: 15.py  15_async.py  api.py  db.py
Lesson23/: app.py  db.py
Lesson23/templates/: base.html  del_visitor.html  edit_visitor.html  index.html  new_visitor.html  visitors.html
Lesson23/templates/helpers/: forms.html
Lesson23/templates/visitors/: add-new.html  add.html  details.html  index.html
Lesson23/views/: visitors.py
Lesson24/: Dockerfile
Lesson24/visitors/: app.py  visitors.db
Lesson24/visitors/templates/: base.html  edit_visitor.html  new_visitor.html  visitors.html
Lesson25/: Dockerfile  docker-compose.yml
Lesson25/visitors/: pyproject.toml
Lesson25/visitors/tests/: test_visitors.py
Lesson25/visitors/visitors/: app.py  db.py  main.py  requirements.txt
Lesson25/visitors/visitors/database/: visitors.db
Lesson25/visitors/visitors/templates/: base.html
Lesson27_sqlite/msl/: db.sqlite3  manage.py
Lesson27_sqlite/msl/msl/: settings.py  urls.py
Lesson27_sqlite/msl/templates/: base.html
Lesson27_sqlite/msl/visitors/: models.py  views.py
Lesson31/: requirements.txt
Lesson31/msl/: .coverage  db.sqlite3
Lesson31/msl/htmlcov/: _home_marcus_PycharmProjects_PythonBase_venv_lib_python3_8_site-packages_asgiref___init___py.html  _home_marcus_PycharmProjects_PythonBase_venv_lib_python3_8_site-packages_asgiref_current_thread_executor_py.html  (+433 more)
Lesson6/: 6.py  bicycle.py  electric_bicycle.py  exeptions.py
Lesson8/: 8.py  README.md  Visitors.py  my_child.py  my_ticket.py  test_check_age.py
(+22 files in other folders)
