[tool.poetry]
name = "visitors"
version = "0.1.0"
description = ""
authors = ["MarcusStill <belg.marcus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
